[package]
name = "blust"
version = "0.1.1"
edition = "2021"
authors = ["Luís Silva <luiscomsnofim@gmail.com>"]
description = "another static blog generator"
documentation = "https://github.com/LudeeD/blust"
homepage = "https://github.com/LudeeD/blust"
repository = "https://github.com/LudeeD/blust"
keywords = ["static", "generator", "cli"]
license = "MIT"


[dependencies]
glob = "0.3.0"
anyhow = "1.0.58"
pulldown-cmark = { version = "0.9.2", default-features = false, features = [
    "simd",
] }
handlebars = "4.3.3"
serde_json = "1.0.82"
chrono = "0.4.24"
toml_edit = "0.19.8"
